Station REST completed
